--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-date-range": "^1.1.2",
+    "react-date-range": "^1.1.3",
     "clsx": "^1.2.1",
+    "moment": "^2.29.4",
     "eslint": "^8.26.0",
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
