--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.24",
     "@types/react-date-range": "^1.1.2",
     "@types/react-dom": "^18.0.8",
+    "@types/react-sidebar": "^3.0.2",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "eslint": "^8.26.0",
@@ -24,6 +25,8 @@
     "react-date-range": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
